z-index fixing

--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -4,12 +4,12 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: 999;
+  z-index: 500;
 }
 
 .close-outer-language{
   background: var(--color-black-t60);
-  z-index: 9999999;
+  z-index: 1500;
 }
 
 
@@ -18,7 +18,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 9999999;
+  z-index: 2000;
   max-width: 20rem;
   width: 100%;
   animation: none;
@@ -75,7 +75,7 @@ nav {
     box-shadow: 0 4px 6px var(--color-black-t10);
     color: var(--color-white);
   
-    z-index: 9999;
+    z-index: 100;
     position: fixed;
     top: 0;
  
@@ -208,7 +208,7 @@ nav {
       position: fixed;
       top: 0;
       right: 0;
-      z-index: 99999;
+      z-index: 1000;
       width: 40%;
       height: 100%;
   
